# vix_pca_futures_trade

./: .gitignore  .pre-commit-config.yaml  README.md  _configs.py  _utilis.py  pyproject.toml  synthetic.py  term_structure.py  weights.py
.github/workflows/: ci.yml
app/: add_weights.py  build_synthetic.py  build_term_structure.py  run_all.py
config/: expiries.txt
data/: daily_pnl.parquet  daily_xs.parquet  df_attr.parquet  df_ret.parquet  df_sig_cvol.parquet  df_sig_rot.parquet  df_sig_vix.parquet  df_w.parquet  df_w2.parquet  diag.parquet  strategy.parquet  synthetic_prices.parquet  term_with_weights.parquet
notebooks/: base_pca_strategy.ipynb  data_exploration.ipynb  dissecting_alpha.ipynb  performance_evaluation.ipynb  sizing_strategy.ipynb
src/vix_pca/: _configs.py  _utilis.py  synthetic.py  term_structure.py  weights.py
src/vix_pca/app/: add_weights.py  build_synthetic.py  build_term_structure.py  run_all.py
tests/: test_smoke.py
