[project]
name = "vix-pca"
version = "0.1.0"
description = "Principal Component Analysis (PCA) on VIX Futures Term Structure"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Laurent Lanteigne", email = "your.email@example.com" }]

dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.2",
    "polars>=1.14.0",
    "scipy>=1.8.0",
    "matplotlib>=3.5.1",
    "seaborn>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vix_pca"]

[tool.uv]
dev-dependencies = [
    "pytest>=6.2.5",
    "ruff>=0.9.3",
    "pre-commit>=4.1.0",
    "mypy>=1.0.0",
]


[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["*.ipynb", "notebooks/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.10"
